--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -1,7 +1,10 @@
 [monitoring_server]
 # 모니터링 서버 (Prometheus + Grafana + Ansible 컨트롤 컨테이너가 있는 노드)
 # SSH 키 기반 접속 (기본)
-monitoring ansible_host=10.0.0.10 monitoring_compose_dir=/app/monitoring prometheus_data_dir=/data/prometheus grafana_data_dir=/data/grafana
+monitoring ansible_host=10.0.0.10 \
+  monitoring_compose_dir=/app/monitoring \
+  prometheus_data_dir=/data/prometheus \
+  grafana_data_dir=/data/grafana
 
 # SSH 비밀번호 기반 접속 예시 (주석 해제해서 사용)
 # monitoring ansible_host=10.0.0.10 ansible_user=root ansible_password=your_password \
