Update local image build instructions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   ansible:
-    image: ghcr.io/warmattack-lab/ansible-control:251117-1
+    image: ansible-control:local
     container_name: ansible-control
     network_mode: host
     tty: true
