--- a/ansible/roles/monitoring_server/tasks/main.yml
+++ b/ansible/roles/monitoring_server/tasks/main.yml
@@ -9,13 +9,14 @@
     - "{{ prometheus_data_dir }}"
     - "{{ grafana_data_dir }}"
     - "{{ monitoring_compose_dir }}"
+    - "{{ monitoring_compose_dir }}/prometheus/provisioning"
     - "{{ monitoring_compose_dir }}/grafana/provisioning/datasources"
     - "{{ monitoring_compose_dir }}/grafana/provisioning/dashboards"
 
 - name: Deploy prometheus.yml
   ansible.builtin.template:
     src: prometheus.yml.j2
-    dest: "{{ monitoring_compose_dir }}/prometheus.yml"
+    dest: "{{ monitoring_compose_dir }}/prometheus/provisioning/prometheus.yml"
 
 - name: Deploy Grafana datasource config
   ansible.builtin.template:
