--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -14,3 +14,12 @@ node2 ansible_host=10.0.0.12
 # 비밀번호 기반 접속 예시
 # node1 ansible_host=10.0.0.11 ansible_user=root ansible_password=your_password ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 # node2 ansible_host=10.0.0.12 ansible_user=root ansible_password=your_password ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+
+[gpu_nodes]
+# GPU 서버 (NVIDIA GPU가 있는 노드, DCGM-Exporter 배포 대상)
+# dcgm_exporter_enabled=true 설정 시 DCGM-Exporter 자동 배포
+# gpu1 ansible_host=10.0.0.21 dcgm_exporter_enabled=true
+# gpu2 ansible_host=10.0.0.22 dcgm_exporter_enabled=true
+
+# 비밀번호 기반 접속 예시
+# gpu1 ansible_host=10.0.0.21 ansible_user=root ansible_password=your_password ansible_ssh_common_args='-o StrictHostKeyChecking=no' dcgm_exporter_enabled=true
