refactor: Extract Docker image versions to variables
- Add prometheus_image, grafana_image, node_exporter_image to group_vars/all.yml
- Update docker-compose.yml.j2 to use image variables
- Update node_exporter role to use image variable
- Centralize Docker image management for easier version control

--- a/ansible/roles/node_exporter/tasks/main.yml
+++ b/ansible/roles/node_exporter/tasks/main.yml
@@ -5,7 +5,7 @@
      --network host
      --pid host
      -v /:/host:ro,rslave
-     prom/node-exporter:latest
+     {{ node_exporter_image }}
      --path.rootfs=/host
    register: node_exporter_run
    changed_when: node_exporter_run.rc == 0
