--- a/ansible/inventory/group_vars/all.yml
+++ b/ansible/inventory/group_vars/all.yml
@@ -6,6 +6,11 @@ grafana_admin_user: admin
 grafana_admin_password: admin
 prometheus_url: "http://{{ hostvars[groups['monitoring_server'][0]].ansible_host | default(hostvars[groups['monitoring_server'][0]].inventory_hostname | default('localhost')) }}:9090"
 
+# Docker image settings
+prometheus_image: "prom/prometheus:latest"
+grafana_image: "grafana/grafana:latest"
+node_exporter_image: "prom/node-exporter:latest"
+
 # DCGM Exporter settings
 dcgm_exporter_enabled: "{{ hostvars[inventory_hostname].dcgm_exporter_enabled | default(false) }}"
 dcgm_exporter_port: 9400
