--- a/ansible/inventory/group_vars/all.yml
+++ b/ansible/inventory/group_vars/all.yml
@@ -1,17 +1,21 @@
+# Prometheus settings
 prometheus_data_dir: "{{ hostvars[inventory_hostname].prometheus_data_dir | default('/data/prometheus') }}"
-grafana_data_dir: "{{ hostvars[inventory_hostname].grafana_data_dir   | default('/data/grafana') }}"
-monitoring_compose_dir: "{{ hostvars[inventory_hostname].monitoring_compose_dir | default('/app/monitoring') }}"
-
-grafana_admin_user: admin
-grafana_admin_password: admin
+prometheus_image: "prom/prometheus:latest"
 prometheus_url: "http://{{ hostvars[groups['monitoring_server'][0]].ansible_host | default(hostvars[groups['monitoring_server'][0]].inventory_hostname | default('localhost')) }}:9090"
 
-# Docker image settings
-prometheus_image: "prom/prometheus:latest"
+# Grafana settings
+grafana_admin_password: admin
+grafana_admin_user: admin
+grafana_data_dir: "{{ hostvars[inventory_hostname].grafana_data_dir   | default('/data/grafana') }}"
 grafana_image: "grafana/grafana:latest"
+
+# Node Exporter settings
 node_exporter_image: "prom/node-exporter:latest"
 
 # DCGM Exporter settings
 dcgm_exporter_enabled: "{{ hostvars[inventory_hostname].dcgm_exporter_enabled | default(false) }}"
-dcgm_exporter_port: 9400
 dcgm_exporter_image: "nvcr.io/nvidia/k8s/dcgm-exporter:4.4.2-4.7.0-ubuntu22.04"
+dcgm_exporter_port: 9400
+
+# Common settings
+monitoring_compose_dir: "{{ hostvars[inventory_hostname].monitoring_compose_dir | default('/app/monitoring') }}"
