--- a/ansible/roles/monitoring_server/tasks/main.yml
+++ b/ansible/roles/monitoring_server/tasks/main.yml
@@ -49,6 +49,11 @@
     src: node-exporter-full.json
     dest: "{{ monitoring_compose_dir }}/grafana/provisioning/dashboards/node-exporter-full.json"
 
+- name: Copy DCGM Exporter dashboard
+  ansible.builtin.copy:
+    src: dcgm-exporter-dashboard.json
+    dest: "{{ monitoring_compose_dir }}/grafana/provisioning/dashboards/dcgm-exporter-dashboard.json"
+
 - name: Deploy monitoring docker-compose.yml
   ansible.builtin.template:
     src: docker-compose.yml.j2
