feat: Make Grafana dashboard folder name configurable
- Add grafana_dashboard_folder variable to group_vars/all.yml
- Set default folder name to 'DELL GB10 Monitoring'
- Update dashboards.yml.j2 to use variable instead of hardcoded folder name
- Add dashboards directory creation in monitoring stack setup
- Rename provider to 'Monitoring Dashboards' for broader scope

--- a/ansible/roles/monitoring_server/tasks/main.yml
+++ b/ansible/roles/monitoring_server/tasks/main.yml
@@ -28,6 +28,7 @@
     - "{{ monitoring_compose_dir }}"
     - "{{ monitoring_compose_dir }}/prometheus/provisioning"
     - "{{ monitoring_compose_dir }}/grafana/provisioning/datasources"
+    - "{{ monitoring_compose_dir }}/grafana/provisioning/dashboards"
 
 - name: Deploy prometheus.yml
   ansible.builtin.template:
