feat: Make Grafana dashboard titles configurable
- Move dashboard JSON files from files/ to templates/ with .j2 extension
- Add grafana_node_exporter_dashboard_title and grafana_dcgm_dashboard_title variables
- Set titles to 'System Monitoring Dashboard' and 'NVIDIA GPU Monitoring Dashboard'
- Change dashboard deployment from copy to template tasks
- Enable dynamic dashboard title customization

--- a/ansible/inventory/group_vars/all.yml
+++ b/ansible/inventory/group_vars/all.yml
@@ -7,6 +7,8 @@ prometheus_url: "http://{{ hostvars[groups['monitoring_server'][0]].ansible_host
 grafana_admin_password: admin
 grafana_admin_user: admin
 grafana_dashboard_folder: "DELL GB10 Monitoring"
+grafana_dcgm_dashboard_title: "NVIDIA GPU Monitoring Dashboard"
+grafana_node_exporter_dashboard_title: "System Monitoring Dashboard"
 grafana_data_dir: "{{ hostvars[inventory_hostname].grafana_data_dir   | default('/data/grafana') }}"
 grafana_image: "grafana/grafana:latest"
 
